# funding-rate-daily-top10

./: .gitattributes  .gitignore  README.md  config.yaml.example  pyproject.toml  requirements.txt
deploy/: README.md  run_daily.bat
scripts/: diag_haircut.py  diag_haircut_raw.py  test_haircut.py
src/funding_top10/: binance_api.py  biyi_api.py  cache_util.py  config.py  datahub.py  main.py  queries.py  scoring.py  slack_message.py
tests/: test_binance_api.py  test_config.py  test_datahub.py  test_scoring.py  test_slack_message.py
